<resources>
    <string name="app_name">TaskCar</string>
    <string name="ApplicationName">TaskCar</string>
    <!--Nombres del Menú-->
    <string name="Menu_Cita">Citas</string>
    <string name="Menu_AuxilioMecanico">Auxilio Mecánico</string>
    <string name="Menu_HistoriaVehicular">Historia Vehicular</string>
    <string name="Menu_Concesionario">Concecionarios</string>
    <string name="Menu_Showroom">Show Room</string>
    <string name="Menu_Inicio">Inicio</string>
    <string name="Menu_Salir">Salir</string>
    <string name="facebook_app_id">433181847066006</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="AuxilioMecanico">
        <item>Cambio de LLanta</item>
        <item>Batería</item>
        <item>Aire</item>
        <item>Servicio1</item>
        <item>Servicio2</item>
    </string-array>
    <string-array name="TipoMantenimiento">
        <item>5,000 km</item>
        <item>10,000 km</item>
        <item>15,000 km</item>
        <item>20,000 km</item>
        <item>25,000 km</item>
        <item>30,000 km</item>
        <item>35,000 km</item>
        <item>40,000 km</item>
        <item>45,000 km</item>
        <item>50,000 km</item>
        <item>55,000 km</item>
        <item>60,000 km</item>
        <item>65,000 km</item>
        <item>70,000 km</item>
        <item>75,000 km</item>
        <item>80,000 km</item>
        <item>85,000 km</item>
        <item>90,000 km</item>
        <item>95,000 km</item>
        <item>100,000 km</item>
        <item>OTROS</item>
    </string-array>
    <string-array name="MarcasVehiculo">
        <item>Selecciona una Marca</item>
        <item>Changan</item>
        <item>Citroen</item>
        <item>DS</item>
        <item>Foton</item>
        <item>Great Wall</item>
        <item>Haval</item>
        <item>Jac</item>
        <item>Mazda</item>
        <item>Suzuki</item>
    </string-array>

    <string name="hint">Editor #%d</string>
</resources>
